# LittleInterpreter

./: ChangeLog.md  README.md  write-yourself-a-scheme.cabal
etc/: fac.scm
src/: Main.hs  WYAS0.hs  WYAS1.hs  WYAS2.hs  WYAS3.hs  WYAS4.hs  WYAS5.hs  WYAS6.hs
