name:                write-yourself-a-scheme
version:             0.1.0.0
synopsis:            An adaptation of the Haskell Wikibook tutorial (https://en.wikibooks.org/wiki/Write_Yourself_a_Scheme_in_48_Hours) for teaching purposes
-- description:         
homepage:            https://github.com/jimburton/write-yourself-a-scheme
license:             BSD3
license-file:        LICENSE
author:              Jim Burton
maintainer:          j.burton@brighton.ac.uk
-- copyright:           
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable week1
  main-is:             WYAS0.hs
  build-depends:       base
                     , parsec
                     , mtl
  hs-source-dirs:      src
  --ghc-options:         -Wall
  default-language:    Haskell2010

executable week2
  main-is:             WYAS3.hs
  -- other-modules:       
  other-extensions:    ExistentialQuantification
  build-depends:       base
                     , parsec
                     , mtl
                     , haskeline
  hs-source-dirs:      src
  --ghc-options:         -Wall
  default-language:    Haskell2010

executable week3
  main-is:             WYAS6.hs
  -- other-modules:       
  other-extensions:    ExistentialQuantification
  build-depends:       base
                     , parsec
                     , mtl
                     , haskeline
  hs-source-dirs:      src
  --ghc-options:         -Wall
  default-language:    Haskell2010
